--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "framer-motion": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mysql2": "latest",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "pdf-lib": "latest",
